Started a concept of table layout, seems like there could be a more elegant method. Also horizontal size could be an issue.

--- a/xmlPT.css
+++ b/xmlPT.css
@@ -1,1 +1,428 @@
-#css file
+#element1
+{
+	background: blue;
+	position: relative;
+}
+
+#element2
+{
+	background: blue;
+	position: relative;
+	left: 1664px;
+}
+
+#element3
+{
+	background: blue;
+	position: relative;
+	top: 104px;
+	left: -208px;
+}
+
+#element4
+{
+	background: blue;
+	position: relative;
+	top: 104px;
+	left: -208px;
+}
+
+#element5
+{
+	background: blue;
+	position: relative;
+	top: 104px;
+	left: 832px;
+}
+
+#element6
+{
+	background: blue;
+	position: relative;
+	top: 104px;
+	left: 832px;
+}
+
+#element7
+{
+	background: blue;
+	position: relative;
+	top: 104px;
+	left: 832px;
+}
+
+#element8
+{
+	background: blue;
+	position: relative;
+	top: 104px;
+	left: 832px;
+}
+
+#element9
+{
+	background: blue;
+	position: relative;
+	top: 104px;
+	left: 832px;
+}
+
+#element10
+{
+	background: blue;
+	position: relative;
+	top: 104px;
+	left: 832px;
+}
+
+#element11
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: -1040px;
+}
+
+#element12
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: -1040px;
+}
+
+#element13
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element14
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element15
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element16
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element17
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element18
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element19
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element20
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element21
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element22
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element23
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element24
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element25
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element26
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element27
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element28
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element29
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element30
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element31
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element32
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element33
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element34
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element35
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element36
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element37
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element38
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element39
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element40
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element41
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element42
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element43
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element44
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element45
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element46
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element47
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element48
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element49
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element50
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element51
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element52
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element53
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
+
+#element54
+{
+	background: blue;
+	position: relative;
+	top: 208px;
+	left: 0px;
+}
